tests/must_not_compile/append3.stderr
error[E0277]: the trait bound `coproduct::type_inequality::End: type_inequality::IdNotEqual<coproduct::type_inequality::End>` is not satisfied
  --> tests/must_not_compile/append3.rs:20:22
   |
20 |     let _: Coproduct<C> = coproduct::inject(A);
   |                      ^ the trait `type_inequality::IdNotEqual<coproduct::type_inequality::End>` is not implemented for `coproduct::type_inequality::End`
   |
   = help: the following other types implement trait `type_inequality::IdNotEqual<Other>`:
             <coproduct::type_inequality::End as type_inequality::IdNotEqual<One<X>>>
             <coproduct::type_inequality::End as type_inequality::IdNotEqual<coproduct::type_inequality::Zero<X>>>
   = note: required for `One<coproduct::type_inequality::End>` to implement `type_inequality::IdNotEqual<One<coproduct::type_inequality::End>>`
   = note: required for `B` to implement `NotEqual<B>`
   = note: required for `coproduct::Union<B, EmptyUnion>` to implement `merge::DoesNotContain<B>`
   = note: 1 redundant requirement hidden
   = note: required for `coproduct::Union<A, coproduct::Union<B, EmptyUnion>>` to implement `merge::DoesNotContain<B>`
   = note: required for `coproduct::Union<A, coproduct::Union<B, EmptyUnion>>` to implement `Append<B, coproduct::merge::NotPresent>`
